--- a/content/Building and Evaluating Advanced RAG Applications/images/1. 高级RAG管道Advanced_RAG_Pipeline.ipynb
+++ b/content/Building and Evaluating Advanced RAG Applications/images/1. 高级RAG管道Advanced_RAG_Pipeline.ipynb
@@ -115,7 +115,7 @@
     "\n",
     "llm = OpenAI(model=\"gpt-3.5-turbo\", temperature=0.1)\n",
     "service_context = ServiceContext.from_defaults(\n",
-    "    llm=llm, embed_model=\"local:BAAI/bge-small-en-v1.5\"\n",
+    "    llm=llm, embed_model=\"local:BAAI/bge-small-zh-v1.5\"\n",
     ")\n",
     "index = VectorStoreIndex.from_documents([document],\n",
     "                                        service_context=service_context)"
@@ -185,7 +185,7 @@
    "outputs": [],
    "source": [
     "eval_questions = []\n",
-    "with open('eval_questions.txt', 'r') as file:\n",
+    "with open('generated_questions.txt', 'r') as file:\n",
     "    for line in file:\n",
     "        # Remove newline character and convert to integer\n",
     "        item = line.strip()\n",
@@ -211,7 +211,7 @@
    "outputs": [],
    "source": [
     "# You can try your own question:\n",
-    "new_question = \"What is the right AI job for me?\"\n",
+    "new_question = \"什么是适合我的人工智能工作?\"\n",
     "eval_questions.append(new_question)"
    ]
   },
