fix: 修改一些小问题

--- a/content/Building and Evaluating Advanced RAG Applications/3.句子滑窗检索Sentence_window_retrieval.ipynb
+++ b/content/Building and Evaluating Advanced RAG Applications/3.句子滑窗检索Sentence_window_retrieval.ipynb
@@ -722,7 +722,7 @@
    "outputs": [],
    "source": [
     "eval_questions = []\n",
-    "with open('data/generated_questions.text', 'r') as file:\n",
+    "with open('data/generated_questions.txt', 'r') as file:\n",
     "    for line in file:\n",
     "        # Remove newline character and convert to integer\n",
     "        item = line.strip()\n",
@@ -864,7 +864,7 @@
    "outputs": [],
    "source": [
     "eval_questions = []\n",
-    "with open('data/generated_questions.text', 'r') as file:\n",
+    "with open('data/generated_questions.txt', 'r') as file:\n",
     "    for line in file:\n",
     "        # Remove newline character and convert to integer\n",
     "        item = line.strip()\n",
