--- a/content/Building and Evaluating Advanced RAG Applications/3.评估RAG应用的指标 RAG Traid of Metrics.ipynb
+++ b/content/Building and Evaluating Advanced RAG Applications/3.评估RAG应用的指标 RAG Traid of Metrics.ipynb
@@ -170,6 +170,10 @@
     "# 使用的文档为“人工智能”词条的维基百科页面\n",
     "documents = SimpleDirectoryReader(\n",
     "    input_files=[\"./data/人工智能.pdf\"]\n",
+    ").load_data()\n",
+    "\n",
+    "documents_en = SimpleDirectoryReader(\n",
+    "    input_files=[\"./data/eBook-How-to-Build-a-Career-in-AI.pdf\"]\n",
     ").load_data()\n"
    ]
   },
@@ -193,7 +197,10 @@
     "\n",
     "# 将documents中的内容合并成一个大文档，而不是每一页都是一个文档\n",
     "document = Document(text=\"\\n\\n\".\\\n",
-    "                    join([doc.text for doc in documents]))\n"
+    "                    join([doc.text for doc in documents]))\n",
+    "\n",
+    "document_en = Document(text=\"\\n\\n\".\\\n",
+    "                    join([doc.text for doc in documents_en]))\n"
    ]
   },
   {
@@ -207,7 +214,8 @@
     "# 不处理的话，会导致无法正确切分中文句子，会影响后续sentence_window的大小，导致输入长度大于gpt-3.5-turbo的最大限制\n",
     "document.text=document.text.replace('。','. ')\n",
     "document.text=document.text.replace('！','! ')\n",
-    "document.text=document.text.replace('？','? ')\n"
+    "document.text=document.text.replace('？','? ')\n",
+    "\n"
    ]
   },
   {
@@ -245,6 +253,13 @@
     "    llm,\n",
     "    embed_model=\"local:BAAI/bge-small-zh-v1.5\",\n",
     "    save_dir=\"sentence_index\"\n",
+    ")\n",
+    "\n",
+    "sentence_index_en = build_sentence_window_index(\n",
+    "    document_en,\n",
+    "    llm,\n",
+    "    embed_model=\"local:BAAI/bge-small-en-v1.5\",\n",
+    "    save_dir=\"sentence_index_en\"\n",
     ")\n"
    ]
   },
@@ -268,7 +283,10 @@
     "# 根据sentence_index对象创建一个搜索引擎\n",
     "# 之后会被用于在RAG应用中进行召回\n",
     "sentence_window_engine = \\\n",
-    "get_sentence_window_query_engine(sentence_index)\n"
+    "get_sentence_window_query_engine(sentence_index)\n",
+    "\n",
+    "sentence_window_engine_en = \\\n",
+    "get_sentence_window_query_engine(sentence_index_en)\n"
    ]
   },
   {
@@ -310,7 +328,8 @@
    "source": [
     "output = sentence_window_engine.query(\n",
     "    \"AI的核心问题和长远目标是什么？\")\n",
-    "output\n",
+    "output_en = sentence_window_engine_en.query(\n",
+    "    \"How do you create your AI portfolio?\")\n",
     "# 示例：使用搜索引擎进行召回"
    ]
   },
@@ -654,7 +673,11 @@
     "# 读取评估问题，在./data/eval_questions.txt下，可以自定义\n",
     "with open('./data/eval_questions.txt', 'r') as file:\n",
     "    for line in file:\n",
-    "        # Remove newline character and convert to integer\n",
+    "        item = line.strip()\n",
+    "        eval_questions.append(item)\n",
+    "\n",
+    "with open('./data/eval_questions_en.txt', 'r') as file:\n",
+    "    for line in file:\n",
     "        item = line.strip()\n",
     "        eval_questions.append(item)"
    ]
