Update 3.评估RAG应用的指标 RAG Traid of Metrics.ipynb

--- a/content/Building and Evaluating Advanced RAG Applications/3.评估RAG应用的指标 RAG Traid of Metrics.ipynb
+++ b/content/Building and Evaluating Advanced RAG Applications/3.评估RAG应用的指标 RAG Traid of Metrics.ipynb
@@ -283,10 +283,17 @@
     "# 根据sentence_index对象创建一个搜索引擎\n",
     "# 之后会被用于在RAG应用中进行召回\n",
     "sentence_window_engine = \\\n",
-    "get_sentence_window_query_engine(sentence_index)\n",
-    "\n",
+    "get_sentence_window_query_engine(sentence_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sentence_window_engine_en = \\\n",
-    "get_sentence_window_query_engine(sentence_index_en)\n"
+    "get_sentence_window_query_engine(sentence_index_en)"
    ]
   },
   {
@@ -316,7 +323,15 @@
    ],
    "source": [
     "output = sentence_window_engine.query(\n",
-    "    \"AI的核心问题和长远目标是什么？\")\n",
+    "    \"AI的核心问题和长远目标是什么？\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "output_en = sentence_window_engine_en.query(\n",
     "    \"How do you create your AI portfolio?\")\n",
     "# 示例：使用搜索引擎进行召回"
@@ -665,6 +680,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tru_recorder_en = TruLlama(\n",
+    "    sentence_window_engine_en,\n",
+    "    app_id=\"App_1_en\",\n",
+    "    feedbacks=[\n",
+    "        f_qa_relevance,\n",
+    "        f_qs_relevance,\n",
+    "        f_groundedness\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -686,8 +718,15 @@
     "with open('./data/eval_questions.txt', 'r') as file:\n",
     "    for line in file:\n",
     "        item = line.strip()\n",
-    "        eval_questions.append(item)\n",
-    "\n",
+    "        eval_questions.append(item)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "eval_questions_en = []\n",
     "with open('./data/eval_questions_en.txt', 'r') as file:\n",
     "    for line in file:\n",
@@ -808,13 +847,18 @@
     "# 注意：该过程可能会比较耗时，请耐心等待\n",
     "for question in eval_questions:\n",
     "    with tru_recorder as recording:\n",
-    "        sentence_window_engine.query(question)\n",
-    "\n",
-    "# 中英文二选一运行，否则会报错\n",
-    "        \n",
-    "# for question in eval_questions_en:\n",
-    "#     with tru_recorder as recording:\n",
-    "#         sentence_window_engine_en.query(question)"
+    "        sentence_window_engine.query(question)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for question in eval_questions_en:\n",
+    "    with tru_recorder_en as recording:\n",
+    "        sentence_window_engine_en.query(question)"
    ]
   },
   {
