--- a/content/Building and Evaluating Advanced RAG Applications/4.句子滑窗检索 Sentence window retrieval.ipynb
+++ b/content/Building and Evaluating Advanced RAG Applications/4.句子滑窗检索 Sentence window retrieval.ipynb
@@ -9,11 +9,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 1,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +19,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -40,11 +35,6 @@
      ]
     }
    ],
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "source": [
     "import utils\n",
     "\n",
@@ -62,11 +52,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 3,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +65,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -118,7 +103,7 @@
    "source": [
     "from llama_index import SimpleDirectoryReader\n",
     "\n",
-    "documents = SimpleDirectoryReader(\n",
+    "documents_en = SimpleDirectoryReader(\n",
     "    input_files=[\"data/eBook-How-to-Build-a-Career-in-AI.pdf\"]\n",
     ").load_data()"
    ]
@@ -144,16 +129,10 @@
     }
    ],
    "source": [
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
-    "print(type(documents), \"\\n\")\n",
-    "print(len(documents), \"\\n\")\n",
-    "print(type(documents[0]))\n",
-    "print(documents[0])"
+    "print(type(documents_en), \"\\n\")\n",
+    "print(len(documents_en), \"\\n\")\n",
+    "print(type(documents_en[0]))\n",
+    "print(documents_en[0])"
    ]
   },
   {
@@ -165,11 +144,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 5,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,11 +155,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 6,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,11 +183,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 43,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,11 +207,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 8,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,20 +217,17 @@
    ]
   },
   {
-<<<<<<< HEAD
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \"hello. how are you? I am fine!  \"\n",
+    "text_en = \"hello. how are you? I am fine!  \"\n",
     "\n",
-    "nodes = node_parser.get_nodes_from_documents([Document(text=text)])"
+    "nodes = node_parser.get_nodes_from_documents([Document(text=text_en)])"
    ]
   },
   {
-=======
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -276,7 +236,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -288,11 +247,6 @@
      ]
     }
    ],
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "source": [
     "print([x.text for x in nodes])"
    ]
@@ -306,7 +260,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -318,22 +271,13 @@
      ]
     }
    ],
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "source": [
     "print(nodes[1].metadata[\"window\"])"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 11,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +288,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -356,18 +299,12 @@
      ]
     }
    ],
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "source": [
     "print([x.text for x in nodes])"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -379,11 +316,6 @@
      ]
     }
    ],
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "source": [
     "print(nodes[0].metadata[\"window\"])"
    ]
@@ -404,11 +336,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 14,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,11 +354,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 15,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,11 +362,7 @@
     "\n",
     "sentence_context = ServiceContext.from_defaults(\n",
     "    llm=llm,\n",
-<<<<<<< HEAD
     "    embed_model=\"local:BAAI/bge-small-zh-v1.5\",  # \"local:BAAI/bge-small-en-v1.5\" for english\n",
-=======
-    "    embed_model=\"local:BAAI/bge-small-zh-v1.5\",\n",
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
     "    node_parser=node_parser,\n",
     ")"
    ]
@@ -456,11 +376,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 16,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,11 +396,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 17,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,11 +412,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 18,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,11 +453,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 19,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,11 +474,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 20,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +487,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 21,
    "metadata": {},
    "outputs": [
@@ -602,11 +501,6 @@
      "output_type": "execute_result"
     }
    ],
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "source": [
     "nodes_old[1].text"
    ]
@@ -620,11 +514,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 22,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +523,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 23,
    "metadata": {},
    "outputs": [
@@ -645,11 +534,6 @@
      ]
     }
    ],
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "source": [
     "print(replaced_nodes[1].text)"
    ]
@@ -670,11 +554,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 24,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,11 +577,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 25,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +593,6 @@
    ]
   },
   {
-<<<<<<< HEAD
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -726,17 +601,15 @@
     "from llama_index import QueryBundle\n",
     "from llama_index.schema import TextNode, NodeWithScore\n",
     "\n",
-    "query = QueryBundle(\"I want a dog.\")\n",
+    "query_en = QueryBundle(\"I want a dog.\")\n",
     "\n",
-    "scored_nodes = [\n",
+    "scored_nodes_en = [\n",
     "    NodeWithScore(node=TextNode(text=\"This is a cat\"), score=0.6),\n",
     "    NodeWithScore(node=TextNode(text=\"This is a dog\"), score=0.4),\n",
     "]"
    ]
   },
   {
-=======
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -745,15 +618,11 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 26,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
-    "reranked_nodes = rerank.postprocess_nodes(\n",
+    "reranked_nodes_en = rerank.postprocess_nodes(\n",
     "    scored_nodes, query_bundle=query\n",
     ")"
    ]
@@ -767,7 +636,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 27,
    "metadata": {},
    "outputs": [
@@ -789,13 +657,8 @@
      "output_type": "execute_result"
     }
    ],
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "source": [
-    "print([(x.text, x.score) for x in reranked_nodes])\n",
+    "print([(x.text, x.score) for x in reranked_nodes_en])\n",
     "\n",
     "'''\n",
     "[('This is a dog', 0.91827345), ('This is a cat', 0.0014040739)]\n",
@@ -819,11 +682,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 28,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,11 +700,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 29,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,20 +710,17 @@
    ]
   },
   {
-<<<<<<< HEAD
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "window_response = sentence_window_engine.query(\n",
+    "window_response_en = sentence_window_engine.query(\n",
     "    \"What are the keys to building a career in AI?\"\n",
     ")"
    ]
   },
   {
-=======
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -878,7 +730,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 30,
    "metadata": {},
    "outputs": [
@@ -903,15 +754,13 @@
   },
   {
    "cell_type": "code",
-=======
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from llama_index.response.notebook_utils import display_response\n",
     "\n",
-    "display_response(window_response)"
+    "display_response(window_response_en)"
    ]
   },
   {
@@ -940,11 +789,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 31,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,11 +848,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 32,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1035,11 +876,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 33,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,11 +899,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 34,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,11 +922,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 35,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,20 +938,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-<<<<<<< HEAD
     "定义了一个函数 `run_evals`，该函数接受生成的问题列表、`TruLens` 记录器和查询引擎作为参数。对于每个问题，使用 `TruLens` 记录器开始记录，然后使用查询引擎执行查询。"
-=======
-    "定义了一个函数 `run_evals`，该函数接受生成的问题列表、`TruLens` 记录器和查询引擎作为参数。对于每个问题，使用 `TruLens` 记录器开始记录，然后使用查询引擎执行查询。这个函数看起来是在评估查询结果，但是在提供的代码片段中并没有实际评估的逻辑。"
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 36,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1143,7 +964,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 37,
    "metadata": {},
    "outputs": [
@@ -1156,23 +976,14 @@
      ]
     }
    ],
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "source": [
     "from utils import get_prebuilt_trulens_recorder\n",
     "\n",
     "from trulens_eval import Tru\n",
     "\n",
-<<<<<<< HEAD
     "tru = Tru()\n",
     "\n",
     "tru.reset_database()"
-=======
-    "Tru().reset_database()"
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    ]
   },
   {
@@ -1191,22 +1002,14 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 38,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
     "sentence_index_1 = build_sentence_window_index(\n",
     "    documents,\n",
     "    llm=OpenAI(model=\"gpt-3.5-turbo\", temperature=0.1),\n",
-<<<<<<< HEAD
     "    embed_model=\"local:BAAI/bge-small-zh-v1.5\",  # \"local:BAAI/bge-small-en-v1.5\" for english\n",
-=======
-    "    embed_model=\"local:BAAI/bge-small-zh-v1.5\",\n",
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
     "    sentence_window_size=1,\n",
     "    save_dir=\"sentence_index_1\",\n",
     ")\n",
@@ -1228,7 +1031,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 39,
    "metadata": {},
    "outputs": [
@@ -1241,22 +1043,13 @@
      ]
     }
    ],
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "source": [
     "run_evals(eval_questions, tru_recorder_1, sentence_window_engine_1)"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 40,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1270,40 +1063,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-<<<<<<< HEAD
     "查看结果"
-=======
-    "调用 `Tru` 类的 `run_dashboard` 方法，运行 `TruLens` 框架的仪表板,可视化结果。"
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "records, feedback = tru.get_records_and_feedback(app_ids=[])"
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Tru().run_dashboard()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "由于 API 调用有时会失败，您可能偶尔会看到空响应，因此需要重新运行评估。 因此，在较小的批次中运行评估也可以帮助您节省时间和成本，因为您只需在出现问题的批次中重新运行评估。"
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 46,
    "metadata": {},
    "outputs": [
@@ -1583,18 +1356,6 @@
    ],
    "source": [
     "records.head()"
-=======
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "eval_questions = []\n",
-    "with open('data/generated_questions.txt', 'r') as file:\n",
-    "    for line in file:\n",
-    "        # Remove newline character and convert to integer\n",
-    "        item = line.strip()\n",
-    "        eval_questions.append(item)"
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    ]
   },
   {
@@ -1613,22 +1374,14 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 47,
-=======
-   "execution_count": null,
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    "metadata": {},
    "outputs": [],
    "source": [
     "sentence_index_3 = build_sentence_window_index(\n",
     "    documents,\n",
     "    llm=OpenAI(model=\"gpt-3.5-turbo\", temperature=0.1),\n",
-<<<<<<< HEAD
     "    embed_model=\"local:BAAI/bge-small-zh-v1.5\",  # \"local:BAAI/bge-small-en-v1.5\" for english\n",
-=======
-    "    embed_model=\"local:BAAI/bge-small-zh-v1.5\",\n",
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
     "    sentence_window_size=3,\n",
     "    save_dir=\"sentence_index_3\",\n",
     ")\n",
@@ -1659,7 +1412,6 @@
    ]
   },
   {
-<<<<<<< HEAD
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
@@ -1943,12 +1695,6 @@
    ],
    "source": [
     "records.head()"
-=======
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "调用 `Tru` 类的 `run_dashboard` 方法，运行 `TruLens` 框架的仪表板，可能是为了可视化评估结果。"
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
    ]
   },
   {
@@ -1956,13 +1702,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-<<<<<<< HEAD
    "source": []
-=======
-   "source": [
-    "Tru().run_dashboard()"
-   ]
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
   }
  ],
  "metadata": {
@@ -1981,11 +1721,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-<<<<<<< HEAD
    "version": "3.11.7"
-=======
-   "version": "3.8.16"
->>>>>>> d4fa70b237348bd2a0ab6281f9f18d5b49f56b2e
   }
  },
  "nbformat": 4,
